[gd_scene load_steps=2 format=3 uid="uid://beqrjgq2p5a3w"]

[ext_resource type="Script" path="res://scripts/ui/faction_status_panel.gd" id="1"]

[node name="FactionStatusPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 350.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Header" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Faction Status"
horizontal_alignment = 1

[node name="FactionNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Kingdom"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsSection"]
layout_mode = 2
text = "Statistics"

[node name="StatsGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsSection"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RelationshipsSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RelationshipsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RelationshipsSection"]
layout_mode = 2
text = "Relationships"

[node name="RelationshipsList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RelationshipsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProductionSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ProductionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection"]
layout_mode = 2
text = "Production"

[node name="ProductionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close (F)"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="hide_panel"]
